# quantdata

./: .gitignore  README.md  append_tiledb.ipynb  build_client.bat  build_client.sh  docker-compose.yaml  finance.clickhouse.sql  finance.duckdb.sql  finance.duckdb.ticks.sql  finance.tdengine.sql  mongodb_helper.py  read_tiledb.ipynb  schema.md  setup_clickhouse.ipynb  setup_db.ipynb  setup_duckdb.ipynb  setup_mongodb.ipynb  setup_tdengine.ipynb  setup_tiledb.ipynb  upload_pypi.sh
client/: MANIFEST.in  pyproject.toml
client/quantdata/: __init__.py
client/quantdata/analysis/: astock.py
client/tests/: test_duckdb.py  test_mongodb.py  test_tiledb.py
client_cpp/: CMakeLists.txt  CMakePresets.json  README.md  quantdata_config.yml  vcpkg-configuration.json  vcpkg.json
client_cpp/cmake/: quantdataConfig.cmake
client_cpp/include/: datetime.h  quantdata.h  quantdata.macros.h
client_cpp/include/duckdb/: quantdata.h
client_cpp/include/mongodb/: quantdata.h
client_cpp/include/quantdata/: datetime.h  init.h  mongodb.h
client_cpp/src/: datetime.cpp  quantdata.cpp  quantdata.duckdb.cpp  quantdata.mongodb.cpp
client_cpp/test/: test_datetime.cpp  test_duckdb.cpp  test_mongodb.cpp  test_quantdata.cpp
client_python/: pyproject.toml
client_python/quantdata/: __init__.py
client_python/quantdata/analysis/: astock.py
client_python/quantdata/databases/: _duckdb.py  _duckdb_api.py  _duckdb_api2.py  _filedb.py  _mongodb.py  _tdengine.py  _tiledb.py
client_python/tests/: test_duckdb.py  test_filedb.py  test_mongodb.py  test_tiledb.py
datasources/: 000001.SZ.csv  basic_info_stocks.csv  data.csv  data_append.csv  stocks_basic_info.csv  trade_cal.csv
